tests/import_errors/test.js
import {a} from "./exporter" // error
